--- a/app.json
+++ b/app.json
@@ -22,6 +22,10 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "@morrowdigital/watermelondb-expo-plugin",
+      "expo-build-properties"
+    ]
   }
 }
