--- a/package.json
+++ b/package.json
@@ -9,20 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@morrowdigital/watermelondb-expo-plugin": "^2.3.3",
+    "@nozbe/watermelondb": "^0.27.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.19",
+    "expo": "~51.0.21",
+    "expo-build-properties": "~0.12.3",
+    "expo-sqlite": "~14.0.4",
     "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "^3.0.7",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-gesture-handler": "~2.16.1"
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-decorators": "^7.24.7",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "@types/react-native": "^0.73.0",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
