--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@morrowdigital/watermelondb-expo-plugin": "^2.3.3",
     "@nozbe/watermelondb": "^0.27.1",
+    "@nozbe/with-observables": "^1.6.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.21",
@@ -28,7 +29,6 @@
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-decorators": "^7.24.7",
     "@types/react": "~18.2.45",
-    "@types/react-native": "^0.73.0",
     "typescript": "~5.3.3"
   },
   "private": true
